@@ -1,3 +1,6 @@
+02/06/2009
+- bugfix for request variables without index  for example $smarty.get
+
 02/05/2009
 - update of popup plugin
 - added config variables to template parser (load config functions still missing)
